Add inline image preview to image audits

--- a/lighthouse-core/formatters/partials/table.html
+++ b/lighthouse-core/formatters/partials/table.html
@@ -35,6 +35,11 @@
 .table_list em + code, .table_list em + pre {
   margin-top: 10px;
 }
+.table_list td img {
+  height: 32px;
+  width: 32px;
+  object-fit: contain;
+}
 
 .table_list.multicolumn {
   display: flex;
