make preview less magical

--- a/lighthouse-core/formatters/partials/table.html
+++ b/lighthouse-core/formatters/partials/table.html
@@ -57,7 +57,7 @@
     <thead>
       <tr>
         {{#each ../tableHeadings}}
-          <th {{#if_eq @key "previewUrl"}}class="preview-image"{{/if_eq}}>{{this}}</th>
+          <th {{#if_eq @key "preview"}}class="preview-image"{{/if_eq}}>{{this}}</th>
         {{/each}}
       </tr>
     </thead>
